Fixed readallbyte problem